syntax = "proto3";

package hvx.api.v1alpha1.activity.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/activity";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

// Note - This interface is subject to frequent changes in the course of implementation.
service Activity {

  // Activity create an activity that is sent to the activity pub instance server of the specified actor
  // Because the server should not know the user's private key, we forbid the server to access the user's private key,
  // and the user's private key should be saved only in the client and the user's own backup file,
  // so the active signature should be performed in the client, and then the signed data is sent through the server to the server.
  rpc Activity (ActivityRequest) returns (ActivityResponse) {}
}

message ActivityRequest {}

message ActivityResponse {}

